	- The 2 test files t/tree.with*.txt ship as ISO-8859-1 while t/tree.utf8.attributes.txt ships
		as UTF-8. So...
	- Don't explicitly use UTF-8 encoding in DAG_Node.pm's sub read_tree(). Rather, use a regexp
		to standardize line endings after reading. Likewise, in t/read.tree.t, do the same.
	- I have un-commented the 2 extra tests at the end of t/read.tree.t. Specifically,
		line 48 (now 50) was 'for (qw/utf8/)# with without/)'. It now says 'for (qw/utf8 with without/)'
	- Reformat test data files t/tree.*.attributes.txt
		This was done with the new files share/read.write.tree.(pl, sh).
		And it was done because some of the test data files had been written
		by old code with slightly different indenting.
	- Add a new test data file, t/metag.cooked.tree.txt
		It's a copy of MarpaX::Grammar::Parser's share/metag.cooked.tree.
		The test program t/read.tree.t was edited to include this new file.

1.33  2025-03-20T11:16:00
	- Replace the discouraged File::Slurp::Tiny with File::Slurper.
		Thanx to Marcel Telka for the report.
		But why not use File::Slurp? Because...
		https://blogs.perl.org/users/leon_timmermans/2015/08/fileslurp-is-broken-and-wrong.html
	- Add a security policy file SECURITY.md
	- Update Makefile.PL to include both ExtUtils::MakeMaker and perl.

1.32  2021-02-01T15:56:00
	- Update Makefile.PL and POD to change RT to github.

1.31  2018-02-14T09:08:00
	- Clarify licence issue by changing the reference in the DAG_Node.pm file from Artistic V 2
		to Perl, so it now matches what I preemptively put in Makefile.PL and the LICENSE file.
		Sean Burke has kindly agreed to this change.
		$thanx x $many to Gregor Herrmann (Debian Perl Group) for reporting this via github.

1.30  2018-01-26T15:32:00
	- Explicitly escape { and } in a regexp because unescaped { issues a warning now and will become
		a fatal error in Perl V 5.32.
	- Adopt new repo structure. See
		http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.

1.29  2016-03-01T13:39:00